--- a/css/master.css
+++ b/css/master.css
@@ -12,11 +12,14 @@
 	}
 	
 	#coming-soon {
-		transition-duration: 0.4s;
+		-webkit-transition-duration: 0.4s;
+		        transition-duration: 0.4s;
 		
 		position: absolute;
 		left: 50%;
-		transform: translate(-50%, 0);
+		-webkit-transform: translate(-50%, 0);
+		    -ms-transform: translate(-50%, 0);
+		        transform: translate(-50%, 0);
 		
 		top: 0px;
 		background: url(../data/Coming-Soon.png);
@@ -28,11 +31,14 @@
 		width: 664px;
 		
 		opacity: 0;
+		
+		filter: alpha(opacity=0);
 		visibility: hidden;
 	}
 	
 	#logo:hover + #coming-soon, #coming-soon:hover {
 		opacity: 1;
+		filter: alpha(opacity=100);
 		visibility: visible;
 	}
 }
@@ -51,11 +57,14 @@
 	}
 	
 	#coming-soon {
-		transition-duration: 0.4s;
+		-webkit-transition-duration: 0.4s;
+		        transition-duration: 0.4s;
 		
 		position: absolute;
 		left: 50%;
-		transform: translate(-50%, 0);
+		-webkit-transform: translate(-50%, 0);
+		    -ms-transform: translate(-50%, 0);
+		        transform: translate(-50%, 0);
 		
 		top: 10px;
 		background: url(../data/Coming-Soon.png);
@@ -67,11 +76,14 @@
 		width: 512px;
 		
 		opacity: 0;
+		
+		filter: alpha(opacity=0);
 		visibility: hidden;
 	}
 	
 	#logo:hover + #coming-soon, #coming-soon:hover {
 		opacity: 1;
+		filter: alpha(opacity=100);
 		visibility: visible;
 	}
 }
