--- a/sass/screen.sass
+++ b/sass/screen.sass
@@ -64,6 +64,7 @@ $content-padding: 40px
 
 body
 	padding-top: 50px
+	background-color: $black
 		
 .intro-background
 	vertical-align: middle
@@ -125,7 +126,7 @@ body
 	
 .bottom-content-block
 	border-radius: 25px
-	width: 95%
+	width: 100%
 	background: $offwhite
 	padding: 20px
 	box-shadow: 1px 1px 1px #888888
