--- a/css/screen.css
+++ b/css/screen.css
@@ -71,30 +71,30 @@ article, aside, details, figcaption, figure, footer, header, hgroup, main, menu,
   display: block;
 }
 
-/* line 29, ../sass/screen.sass */
+/* line 33, ../sass/screen.sass */
 .container-fluid {
   padding-left: 0;
   padding-right: 0;
 }
 
-/* line 33, ../sass/screen.sass */
+/* line 37, ../sass/screen.sass */
 .navbar-fixed-top {
   border: 0;
 }
 
-/* line 36, ../sass/screen.sass */
+/* line 40, ../sass/screen.sass */
 .navbar-brand-logo {
   height: 50px;
   padding-top: 5px;
 }
 
-/* line 40, ../sass/screen.sass */
+/* line 44, ../sass/screen.sass */
 .navbar {
   font-family: Pacifico, cursive !important;
   background-color: #F6F8EE;
 }
 
-/* line 44, ../sass/screen.sass */
+/* line 48, ../sass/screen.sass */
 .navbar-brand {
   font-weight: 700;
   font-size: 24px;
@@ -102,43 +102,43 @@ article, aside, details, figcaption, figure, footer, header, hgroup, main, menu,
   padding: 0;
 }
 
-/* line 50, ../sass/screen.sass */
+/* line 54, ../sass/screen.sass */
 .navbar-brand-text {
   margin-top: -30px;
   margin-left: 50px;
 }
 
-/* line 54, ../sass/screen.sass */
+/* line 58, ../sass/screen.sass */
 .container > .navbar-header {
   margin-left: 30px;
 }
 
-/* line 57, ../sass/screen.sass */
+/* line 61, ../sass/screen.sass */
 .navbar-nav a {
   font-family: Lato, sans-serif;
   font-weight: 400;
   font-size: 15px;
 }
 
-/* line 62, ../sass/screen.sass */
+/* line 66, ../sass/screen.sass */
 .navbar-default .navbar-nav > .active > a, .navbar-default .navbar-nav > .active > a:focus, .navbar-default .navbar-nav > .active > a:hover {
   background-color: #D6E68A;
 }
 
-/* line 65, ../sass/screen.sass */
+/* line 69, ../sass/screen.sass */
 body {
   padding-top: 50px;
   background-color: #121310;
 }
 
-/* line 69, ../sass/screen.sass */
+/* line 73, ../sass/screen.sass */
 .intro-background {
   vertical-align: middle;
   min-height: 100px;
   background-color: #D6E68A;
 }
 
-/* line 74, ../sass/screen.sass */
+/* line 78, ../sass/screen.sass */
 .intro {
   line-height: 100px;
   font-family: Oswald, sans-serif;
@@ -146,22 +146,50 @@ body {
   font-size: 36px;
 }
 
-/* line 80, ../sass/screen.sass */
+/* line 84, ../sass/screen.sass */
 .middle-content {
   padding-top: 40px;
   padding-bottom: 40px;
   background-color: #F6F8EE;
 }
 
-/* line 85, ../sass/screen.sass */
+/* line 89, ../sass/screen.sass */
 .website-image, .webservices-image {
-  border-radius: 25px;
+  border-radius: 10px;
   background: #95AA61;
   padding: 20px;
   box-shadow: 1px 1px 1px #888888;
 }
 
-/* line 91, ../sass/screen.sass */
+/* line 95, ../sass/screen.sass */
+.header-image {
+  background: url(../data/bamboo.jpeg);
+  background-size: 100%;
+  height: 350px;
+}
+
+/* line 100, ../sass/screen.sass */
+.main-caption-text {
+  line-height: 350px;
+  vertical-align: middle;
+  text-align: center;
+  font-family: Lato, sans-serif;
+  font-size: 68px;
+  font-weight: 700;
+  color: #F6F8EE;
+}
+
+/* line 111, ../sass/screen.sass */
+.main-caption-description-text {
+  font-family: Lato, sans-serif;
+  font-size: 48px;
+  font-weight: 700;
+  margin-left: 10px;
+  margin-top: 10px;
+  color: #F6F8EE;
+}
+
+/* line 119, ../sass/screen.sass */
 .caption-text {
   font-family: Lato, sans-serif;
   font-size: 24px;
@@ -170,7 +198,7 @@ body {
   margin-top: 10px;
 }
 
-/* line 98, ../sass/screen.sass */
+/* line 126, ../sass/screen.sass */
 .caption-text-bottom {
   font-family: Lato, sans-serif;
   font-size: 18px;
@@ -179,7 +207,7 @@ body {
   margin-top: 5px;
 }
 
-/* line 105, ../sass/screen.sass */
+/* line 133, ../sass/screen.sass */
 .description-text {
   margin: 15px 25px 25px 15px;
   font-family: Merriweather, serif;
@@ -187,7 +215,7 @@ body {
   line-height: 24px;
 }
 
-/* line 111, ../sass/screen.sass */
+/* line 139, ../sass/screen.sass */
 .description-text-bottom {
   margin: 15px;
   font-family: Merriweather, serif;
@@ -195,41 +223,52 @@ body {
   line-height: 20px;
 }
 
-/* line 117, ../sass/screen.sass */
+/* line 145, ../sass/screen.sass */
 .vertical-center {
   position: relative;
   top: 50%;
   transform: translateY(-50%);
 }
 
-/* line 122, ../sass/screen.sass */
+/* line 150, ../sass/screen.sass */
 .bottom-content {
   padding-top: 40px;
   padding-bottom: 40px;
   background-color: #899752;
 }
 
-/* line 127, ../sass/screen.sass */
+/* line 155, ../sass/screen.sass */
 .bottom-content-block {
-  border-radius: 25px;
+  border-radius: 10px;
   width: 100%;
   background: #F6F8EE;
   padding: 20px;
   box-shadow: 1px 1px 1px #888888;
 }
 
-/* line 134, ../sass/screen.sass */
+/* line 162, ../sass/screen.sass */
 footer {
   vertical-align: middle;
   background-color: #121310;
   color: #F6F8EE;
 }
 
-/* line 140, ../sass/screen.sass */
+/* line 168, ../sass/screen.sass */
 .footer-text {
   margin: 25px 0 25px 25px;
   font-family: Lato, sans-serif;
   font-weight: 400;
   font-style: italic;
   font-size: 15px;
+}
+
+/* line 175, ../sass/screen.sass */
+.main-image-logo {
+  margin-top: -15px;
+  height: 350px;
+}
+
+/* line 179, ../sass/screen.sass */
+em {
+  font-style: italic;
 }
