--- a/sass/screen.sass
+++ b/sass/screen.sass
@@ -251,3 +251,25 @@ em
 		clip: rect(0 0 0 0)
 		clip: rect(0, 0, 0, 0)
 		position: absolute
+		
+		
+// technology.html section
+.tech-logo
+	width: 300px
+	
+.bottom-content-block
+	height: 300px
+	width: 100%
+
+.bottom-content
+	overflow: hidden
+	
+#mean-description, #net-description, #wordpress-description
+	position: absolute
+	top: 0
+	left: -5000px
+	width: 100%
+	
+.rel-container
+	position: relative
+	height: 300px
